to index from my_index

--- a/DevConf-BS5-v1.0/index.html
+++ b/DevConf-BS5-v1.0/index.html
@@ -331,188 +331,208 @@
 	
 	<section id="schedule-section" class="schedule-section section">
 		<div class="container">
-			<h3 class="section-heading text-center mb-5">Schedule</h3>
+			<h3 class="section-heading text-center mb-5">Annual Schedule</h3>
 			
 			<!-- Nav tabs -->
 			<ul class="schedule-nav nav nav-pills nav-fill" id="myTab" role="tablist">
 				<li class="nav-item me-2">
 					<a class="nav-link active" id="tab-1" data-bs-toggle="tab" href="#tab-1-content" role="tab" aria-controls="tab-1-content" aria-selected="true">
-						<span class="heading">Day 1</span>
-						<span class="meta">(Wed 12, Oct)</span>
+						<span class="heading">1학기</span>
+						<span class="meta">3월~6월</span>
 					</a>
 				</li>
 				<li class="nav-item me-2">
 					<a class="nav-link" id="tab-2" data-bs-toggle="tab" href="#tab-2-content" role="tab" aria-controls="tab-2-content" aria-selected="false">
-						<span class="heading">Day 2</span>
-						<span class="meta">(Thu 13, Oct)</span>
+						<span class="heading">여름방학</span>
+						<span class="meta">6월~9월</span>
 					</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item me-2">
 					<a class="nav-link" id="tab-3" data-bs-toggle="tab" href="#tab-3-content" role="tab" aria-controls="tab-3-content" aria-selected="false">
-						<span class="heading">Day 3</span>
-						<span class="meta">(Fri 14, Oct)</span>
+						<span class="heading">2학기</span>
+						<span class="meta">9월~12월</span>
+					</a>
+				</li>
+
+                <li class="nav-item">
+					<a class="nav-link" id="tab-4" data-bs-toggle="tab" href="#tab-4-content" role="tab" aria-controls="tab-4-content" aria-selected="false">
+						<span class="heading">겨울방학</span>
+						<span class="meta">12월~3월</span>
 					</a>
 				</li>
 			</ul>
 			
 			<!-- Tab panes -->
 			<div class="schedule-tab-content tab-content">
-				<div class="tab-pane active" id="tab-1-content" role="tabpanel" aria-labelledby="tab-1">
+				<div class="tab-pane active" id="tab-1-content" role="tabpanel" aria-labelledby="tab-1"> <!--//1학기-->
+
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">9:00 - 9:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-1.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">James Doe</a></div>
-							</div><!--//profile-->
+							<h4 class="time mb-3">3월 초</h4>
 						</div><!--//meta-->
 						<div class="content">
-							<h3 class="title mb-3">Best Practices And Tips For A Clean Angular Application</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room A</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
+							<h3 class="title mb-3">1학기 개강총회</h3>
+							<div class="desc"><strong>1년의 시작!</strong> 자람에서 1학기를 어떻게 꾸려나갈 지에 대한 회의입니다.</div>
+							<div></div>
 						</div><!--//content-->
 					</div><!--//item-->
+
 					<div class="item item-talk">
 						<div class="meta">
-							<h4 class="time mb-3">9:30 - 10:00</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-2.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Sarah Doe</a></div>
-							</div><!--//profile-->
+							<h4 class="time mb-3">3월 초</h4>
 						</div><!--//meta-->
 						<div class="content">
-							<h3 class="title mb-3">Developer Productivity</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room A</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">10:00 - 10:30</h4>
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Coffee Break</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room A5</div>
-							<div class="desc">Coffee and cakes lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">10:30 - 11:00</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-3.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Tim Doe</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Progressive Web Apps with React.js</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room A</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">11:00 - 12:00</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-4.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Josh Doe</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Talk Title Lorem Ipsum</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room B</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">12:00 - 13:30</h4>
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Lunch Break</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Room B6</div>
-							<div class="desc">Buffet lorem ipsum dolor sit amet, consectetur adipiscing elit. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">13:30 - 14:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-5.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Ling Doe</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Talk Title Lorem Ipsum</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room C</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">14:30 - 15:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-6.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Andy Doe</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Talk Title Lorem Ipsum</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room C</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">15:30 - 16:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-7.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Alice Doe</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Talk Title Lorem Ipsum</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room C</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-talk">
-						<div class="meta">
-							<h4 class="time mb-3">16:30 - 17:30</h4>
-							<div class="profile">
-								<a href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1"><img class="profile-image rounded-circle  mb-2" src="assets/images/speakers/speaker-8.jpg" alt=""></a>
-								<div class="name"><a class="theme-link" href="#modal-speaker-1" data-bs-toggle="modal" data-bs-target="#modal-speaker-1">Thomas Doe</a></div>
-							</div><!--//profile-->
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Talk Title Lorem Ipsum</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Conference Room C</div>
-							<div class="desc">Talk's summary goes here. <strong>You can hook up the speaker profile image/name on the left with his or her bio modal window</strong>. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
-						</div><!--//content-->
-					</div><!--//item-->
-					<div class="item item-other">
-						<div class="meta">
-							<h4 class="time mb-3">18:00 - 24:00</h4>
-						</div><!--//meta-->
-						<div class="content">
-							<h3 class="title mb-3">Dinner &amp; After-party</h3>
-							<div class="location mb-3"><i class="fas fa-map-marker-alt me-2"></i>Bar Lorem Ipsum</div>
-							<div class="desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis ornare nibh, pulvinar posuere justo. Aenean laoreet nunc a eleifend lacinia. Phasellus dignissim augue at consectetur ullamcorper. </div>
+							<h3 class="title mb-3">1학기 스터디 시작</h3>
+							<div class="desc"><strong>신입생: </strong> 기본적으로 C언어 스터디 참여해야하며, 재학생 스터디도 참여 가능합니다.</div>
+							<div><strong>재학생: </strong> 신입생 C언어 스터디의 멘토로 참여하며, 별도의 스터디 1개에 참여해야 합니다.</div>
 						</div><!--//content-->
 					</div><!--//item-->
 					
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">4월 후 ~ 5월 후</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">자유주제 세미나 발표회</h3>
+							<div class="desc"> <strong>1학기 세미나는 재학생만 발표합니다.</strong></div> 
+							<div>전공 관련 주제로, 자신의 관심 분야에 대해 조사하고 발표함으로써 학우분들과 지식을 공유할 수 있는 활동입니다.</div>
+						</div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">6월 중</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">1학기 스터디 종료 및 발표회</h3>
+							<div class="desc">1학기 스터디를 마무리하고, 결과를 발표합니다. </div>
+						</div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">6월 중</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">1학기 종강총회</h3>
+							<div class="desc">1학기 학회의 활동과 회비 내역, 회원 관리, 제적 등의 회의입니다.</div>
+						</div><!--//content-->
+					</div><!--//item-->
 				</div><!--//tab-1-content-->
-				<div class="tab-pane no-timeline" id="tab-2-content" role="tabpanel" aria-labelledby="tab-2">
-					<h4 class="text-center py-5 text-muted">Day 2 Agenda Coming Soon...</h4>
+
+				<div class="tab-pane" id="tab-2-content" role="tabpane2" aria-labelledby="tab-2"> <!--//여름방학-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">7월 후</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">여름방학 워크샵</h3>
+							<div class="desc">모든 학회원이 참여합니다. <strong>3일 동안 이뤄지는 워크샵에서는, 하나의 결과물을 만들어내는 하나의 프로젝트를 진행합니다. </strong></div> 
+							<div>평소 개발에 자신 없던 코린이도 선배들의 도움을 받아 멋진 결과물을 만들어낼 수 있는 멋진 활동이랍니다.</div>
+						</div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">7월 후</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">체육대회/온라인 게임대회</h3>
+							<div class="desc"><strong>학회라고 공부만 하지 않아요! </strong>학우분들과 운동하며 체력도 늘리고, 교우관계도 다지는 1+1 기회!</div>
+							<div>LCK 못지 않은, LCJ! 학우분들과 게임하면서 스트레스도 풀고 관계도 돈독히!</div>
+						</div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">8월 초</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">MT</h3>
+							<div class="desc"><strong>신나신나! </strong>반년동안 수고했으니 이제 꿀같은 여행! 즐거움만 가지고 떠나요~ 바다로~</div>
+						</div><!--//content-->
+					</div><!--//item-->
 				</div><!--//tab-2-content-->
-				<div class="tab-pane no-timeline" id="tab-3-content" role="tabpanel" aria-labelledby="tab-3">
-					<h4 class="text-center py-5 text-muted">Day 3 Agenda Coming Soon...</h4>
+
+				<div class="tab-pane" id="tab-3-content" role="tabpane3" aria-labelledby="tab-3"> <!--//2학기-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">9월 초</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">2학기 개강총회</h3>
+							<div class="desc"><strong>2학기의 시작!</strong> 자람에서 2학기를 어떻게 꾸려나갈 지에 대한 회의입니다.</div>
+							<div></div>
+						</div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">9월 초</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">2학기 스터디 시작</h3>
+							<div class="desc"><strong>2학기 스터디를 시작합니다.</strong> 평소 관심은 있었지만 공부하지 못했던 부분을 학우들과 으쌰으쌰 공부해요!</div>
+						</div><!--//content-->
+					</div><!--//item-->
+					
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">10월 후 ~ 11월 후</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">자유주제 세미나 발표회</h3>
+							<div class="desc"> <strong>2학기 세미나는 학회원 모두 발표합니다.</strong></div> 
+							<div>전공 관련 주제로, 자신의 관심 분야에 대해 조사하고 발표함으로써 학우분들과 지식을 공유할 수 있는 활동입니다.</div>
+						</div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">12월 중</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">2학기 스터디 종료 및 발표회</h3>
+							<div class="desc">2학기 스터디를 마무리하고, 결과를 발표합니다. </div>
+						</div><!--//content-->
+					</div><!--//item-->
+
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">12월 중</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">2학기 종강총회</h3>
+							<div class="desc">2학기 학회의 활동과 회비 내역, 회원 관리, 제적 등의 회의입니다.</div>
+						</div><!--//content-->
+					</div><!--//item-->
 				</div><!--//tab-3-content-->
+
+				<div class="tab-pane" id="tab-4-content" role="tabpane4" aria-labelledby="tab-4"> <!--//겨울방학-->
+					<div class="item item-talk">
+						<div class="meta">
+							<h4 class="time mb-3">1월 후</h4>
+						</div><!--//meta-->
+						<div class="content">
+							<h3 class="title mb-3">겨울방학 워크샵</h3>
+
+							<div class="desc"><strong>모든 학회원이 참여합니다. </strong>3일동안 이뤄지는 워크샵에서는, 하나의 결과물을 만들어내는 하나의 프로젝트를 진행합니다. </div>
+							<div>1년동안 열심히 공부한 내용을 하나의 결과물로 승화시키는 멋진 활동이랍니다.</div>
+						</div><!--//content-->
+					</div><!--//item-->				
+				</div><!--//tab-4-content-->
+
 			</div><!--//schedule-tab-content-->
-			<div class="schedule-cta text-center mx-auto"><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" class="btn btn-primary btn-lg me-md-2 d-block d-md-inline-block mb-3 mb-md-0" target="_blank">Download Schedule</a><a href="https://themes.3rdwavemedia.com/bootstrap-templates/startup/devconf-free-bootstrap-4-conference-template-for-tech-conferences-and-events/" class="btn btn-secondary btn-lg d-block d-md-inline-block" target="_blank">Buy Tickets</a></div>
+		
 		</div><!--//container-->
 	</section><!--//schedule-section-->
 	
+
+
+
+
+
+
 	<section id="tickets-section" class="tickets-section section theme-bg-light">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">Tickets</h3>
