--- a/index.html
+++ b/index.html
@@ -529,14 +529,14 @@
 	
 	<section id="about-section" class="about-section section theme-bg-light">
 		<div class="container">
-			<h3 class="section-heading text-center mb-3">세미나, 스터디, 워크샵 우수 사례 소개</h3>
+			<h1 class="section-heading text-center mb-3">세미나, 스터디, 워크샵 우수 사례 소개</h1>
 			<div class="section-intro text-center single-col-max mx-auto text-black mb-5">자람은 <strong>세미나</strong>를 통해 다양한 분야를 접할 수 있도록 하여 관심분야를 정하는데 도움을 주고,<br> 
 				관심분야가 정해진 친구들은 <strong>스터디</strong>를 꾸려 그 분야를 더 깊게 공부할 수 있도록 합니다.<br>
 				그리고 매 학기 방학에 <strong>워크샵</strong>을 개최해 한 가지 주제에 대해 함께, 그리고 깊이 공부하며 프로그래밍 능력과 전공분야에 대한 소양을 기릅니다.</div>
 			
 
 				<div class="container">
-					<h4 class="text-black text-center mb-3">세미나</h4>
+					<h2 class="text-black text-center mb-3">세미나</h2>
 
 					<div class="row gx-5">
 
@@ -557,11 +557,10 @@
 									자연어 처리는 자연어 처리가 무엇인지, 이것이 왜 어려운지, 왜 한국어는 특히 더 어려운지 설명합니다.
 									마지막으로 딥러닝은 주제와 관련된 알고리즘 등을 손으로 직접 세세히 설명합니다. 
 									따라서 이 세미나를 소개합니다</div>
-						
 							</div><!--//col-->			
 						</div>
 				
-					<h4 class="text-black text-center mb-3">스터디</h4>
+					<h2 class="text-black text-center mb-3">스터디</h2>
 
 					<div class="row gx-5">
 
@@ -580,19 +579,21 @@
 
 
 
-						<h4 class="text-black text-center mb-3">워크샵</h4>
+						<h2 class="text-black text-center mb-3">워크샵</h2>
 
 						<div class="row gx-5">
 	
 							<div class="col-12 col-md-6 mb-3">
 								<div class="ratio ratio-16x9">
-									<a href="https://github.com/PrismSpirit/Jaram-workshop-2021-summer"><img src="https://raw.githubusercontent.com/Jaram2019/Jaram-Professor-Crawling-Wiki/master/github/img/main.png" class="card-img-top rounded-0" alt=""></a>
+									<img src="https://raw.githubusercontent.com/Jaram2019/Jaram-Professor-Crawling-Wiki/master/github/img/main.png" class="card-img-top rounded-0" alt=""></a>
 								</div><!--//embed-responsive -->
 							</div><!--//col-->		
 	
 							<div class="col-12 col-md-6 mb-md-5">
 								<div class="ratio ratio-16x9">	
-									<div class="section-intro text-center single-col-max mx-auto text-black mb-5">한 가지 주제에 대해 함께 공부하며 목표를 이루는 활동입니다. 이를 잘 보여주는 사례로 2019년 겨울 워크샵의 결과물 중 하나인 교수님 위키를 소개합니다. 이는 한양대학교 ERICA 홈페이지를 크롤링하여 만든 Wiki 웹 어플리케이션으로, 팀원끼리 힘을 합쳐 만든 결과물입니다. 이것이 워크샵의 방향성을 잘 보여주기에 이를 워크샵의 우수 사례로서 소개합니다.</div>
+									<div class="section-intro text-center single-col-max mx-auto text-black mb-5">한 가지 주제에 대해 함께 공부하며 목표를 이루는 활동입니다. 이를 잘 보여주는 사례로 2019년 겨울 워크샵의 결과물 중 하나인 교수님 위키를 소개합니다. 이는 한양대학교 ERICA 홈페이지를 크롤링하여 만든 Wiki 웹 어플리케이션으로, 팀원끼리 힘을 합쳐 만든 결과물입니다. 이것이 워크샵의 방향성을 잘 보여주기에 이를 워크샵의 우수 사례로서 소개합니다.<br><br><br>
+										<a href = "https://www.naver.com/">
+											<img src = "https://jaram.net/img/icon/github.svg", width=100></a></div>				
 								</div><!--//col-->			
 							</div>
 						</div>	
@@ -600,14 +601,7 @@
 		</div><!--//container-->
 
 		
-	</section><!--//about-section-->
-
-
-
-
-
-	
-	
+	</section><!--//about-section-->	
 	
 	<section id="venue-section" class="venue-section section  theme-bg-primary text-white">
 		<div class="container">
